--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -29,7 +29,7 @@
   /* overflow: auto; */
   display: flex;
   flex-direction: column;
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   min-height: 0;
   overflow: scroll;
 }
