--- a/src/components/Common/ProgressBar/styles.module.css
+++ b/src/components/Common/ProgressBar/styles.module.css
@@ -12,7 +12,7 @@
 .text {
   color: #fff;
   font-size: 1rem;
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   position: absolute;
 }
 
