--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 html,
 body {
-  font-family: '\534E\6587\7EC6\9ED1', '\5FAE\8F6F\96C5\9ED1', 'HelveticaNeue', Arial, Helvetica, sans-serif;
+  font-family: '\534E\6587\7EC6\9ED1', 'Source Han Sans SC', 'HelveticaNeue', Arial, Helvetica, sans-serif;
   font-size: 16px;
   color: #4a4a4a;
   word-break: normal !important;
