--- a/src/components/Charts/styles.module.css
+++ b/src/components/Charts/styles.module.css
@@ -32,7 +32,7 @@
     font-size: 18px;
     line-height: 1.2;
     font-weight: bold;
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
 }
 
 .cleanTitle {
@@ -45,7 +45,7 @@
     font-size: 18px;
     line-height: 1.2;
     font-weight: bold;
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
 }
 
 .issueBox {
@@ -481,7 +481,7 @@
 }
 
 .fixesText span {
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     font-size: 14px;
     font-weight: bold;
     color: #1d2b3c;
@@ -789,7 +789,7 @@ span.fixesEdit {
 }
 
 .cleanTargetRename span {
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     font-size: 14px;
     color: #9b9b9b;
     line-height: 1.2;
@@ -915,7 +915,7 @@ span.fixesEdit {
 }
 
 .fixesTips span {
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     font-size: 14px;
     color: #4a4a4a;
     line-height: 1.3;
@@ -954,7 +954,7 @@ span.fixesEdit {
 }
 
 .fixesComplete span {
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     font-size: 14px;
     color: #4a4a4a;
     line-height: 1.8;
@@ -989,7 +989,7 @@ span.fixesEdit {
 .checkBox label {
     font-size: 14px;
     line-height: 1.1;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     color: #1d2b3c;
     cursor: pointer;
 }
@@ -997,7 +997,7 @@ span.fixesEdit {
 .checkBox span {
     font-size: 14px;
     line-height: 1.1;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     color: #9b9b9b;
 }
 
@@ -1040,7 +1040,7 @@ span.fixesEdit {
 }
 
 .summaryTitle span {
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     font-size: 18px;
     color: #4a4a4a;
     line-height: 1.2;
@@ -1144,7 +1144,7 @@ span.fixesEdit {
 }
 
 .summaryText span {
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     font-size: 14px;
     color: #4a4a4a;
     line-height: 1.2;
@@ -1171,7 +1171,7 @@ span.fixesEdit {
 }
 
 .summaryButton span {
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     font-size: 16px;
     /* font-weight: bold; */
     text-align: left;
@@ -1266,7 +1266,7 @@ button.save {
 
 .issueTab span {
     color: #1d2b3c;
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     font-size: 16px;
     line-height: 1.2;
 }
