--- a/src/components/Info/Quality/styles.module.css
+++ b/src/components/Info/Quality/styles.module.css
@@ -32,7 +32,7 @@
 	font-size: 1.125rem;
 	line-height: 1.2;
 	font-weight: bold;
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 }
 
 .cleanTitle {
@@ -45,7 +45,7 @@
 	font-size: 1.125rem;
 	line-height: 1.2;
 	font-weight: bold;
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 }
 
 .issueBox {
@@ -482,7 +482,7 @@
 }
 
 .fixesText span {
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 	font-size: 0.875rem;
 	font-weight: bold;
 	color: #1d2b3c;
@@ -790,7 +790,7 @@ span.fixesEdit {
 }
 
 .cleanTargetRename span {
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 	font-size: 0.875;
 	color: #9b9b9b;
 	line-height: 1.2;
@@ -916,7 +916,7 @@ span.fixesEdit {
 }
 
 .fixesTips span {
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 	font-size: 0.875rem;
 	color: #4a4a4a;
 	line-height: 1.3;
@@ -955,7 +955,7 @@ span.fixesEdit {
 }
 
 .fixesComplete span {
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 	font-size: 0.875rem;
 	color: #4a4a4a;
 	line-height: 1.8;
@@ -988,7 +988,7 @@ span.fixesEdit {
 .checkBox label {
 	font-size: 0.875rem;
 	line-height: 1.1;
-	font-family: SanFranciscoText;
+	font-family: 'Source Han Sans SC';
 	color: #1d2b3c;
 	cursor: pointer;
 }
@@ -996,7 +996,7 @@ span.fixesEdit {
 .checkBox span {
 	font-size: 0.875rem;
 	line-height: 1.1;
-	font-family: SanFranciscoText;
+	font-family: 'Source Han Sans SC';
 	color: #9b9b9b;
 }
 
@@ -1039,7 +1039,7 @@ span.fixesEdit {
 }
 
 .summaryTitle span {
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 	font-size: 1.125rem;
 	color: #4a4a4a;
 	line-height: 1.2;
@@ -1143,7 +1143,7 @@ span.fixesEdit {
 }
 
 .summaryText span {
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 	font-size: 0.875rem;
 	color: #4a4a4a;
 	line-height: 1.2;
@@ -1170,7 +1170,7 @@ span.fixesEdit {
 }
 
 .summaryButton span {
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 	font-size: 1rem;
 	/* font-weight: bold; */
 	text-align: left;
@@ -1265,7 +1265,7 @@ button.save {
 
 .issueTab span {
 	color: #1d2b3c;
-	font-family: HelveticaNeue;
+	font-family: 'Source Han Sans SC';
 	font-size: 1rem;
 	line-height: 1.2;
 }
