--- a/src/components/Problem/styles.module.css
+++ b/src/components/Problem/styles.module.css
@@ -3,7 +3,7 @@
     flex: auto;
     overflow: auto;
     padding: 0 10%;
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     color: #4a4a4a;
     flex-direction: column;
 }
