--- a/src/components/Report/VariableList/styles.module.css
+++ b/src/components/Report/VariableList/styles.module.css
@@ -8,7 +8,7 @@
 .startTitle {
   display: flex;
   margin: 0.45em 0;
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
 }
 
 .startTitle span {
@@ -153,7 +153,7 @@
 }
 
 .tab span {
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 1.125rem;
   line-height: 1.15;
   color: #979797;
@@ -217,7 +217,7 @@
 }
 
 .targetCell span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   color: #4a4a4a;
   font-size: 0.875rem;
   text-overflow: ellipsis;
@@ -258,7 +258,7 @@
 }
 
 .simplifiedText span {
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 1.125rem;
   line-height: 1.15;
   color: #4a4a4a;
@@ -279,7 +279,7 @@
 }
 
 .toolSelect select {
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   line-height: 1.2;
   color: #4a4a4a;
@@ -298,7 +298,7 @@
 
 .toolLabel span {
   height: 1.2;
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   font-weight: bold;
   color: #4a4a4a;
@@ -316,7 +316,7 @@
 }
 
 .toolButton span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #ffffff;
 }
@@ -334,7 +334,7 @@
 }
 
 .table span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   color: #4a4a4a;
   font-size: 0.875rem;
   line-height: 1.5;
@@ -563,7 +563,7 @@
 }
 
 .advancedTitle span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1.125rem;
   color: #000000;
   line-height: 1.2;
@@ -577,7 +577,7 @@
 }
 
 .advancedOption select {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -586,7 +586,7 @@
 }
 
 .advancedOption span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -595,7 +595,7 @@
 }
 
 .advancedOption input[type='text'] {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1rem;
@@ -619,7 +619,7 @@
 }
 
 .advancedOptionBox label {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -638,7 +638,7 @@ span.advancedDesc {
 }
 
 .advancedSize {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -648,7 +648,7 @@ span.advancedDesc {
 }
 
 .antdAdvancedSize {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -723,7 +723,7 @@ span.advancedDesc {
 }
 
 .advancedPercentInput input {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000;
   line-height: 1.2;
@@ -734,7 +734,7 @@ span.advancedDesc {
 }
 
 .advancedPercentInput span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000;
   line-height: 1.2;
@@ -749,7 +749,7 @@ span.advancedDesc {
 }
 
 .advancedPercentText span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000;
   line-height: 1.2;
@@ -877,7 +877,7 @@ span.advancedDesc {
 }
 
 .advancedAlgorithm label {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
