--- a/src/components/Train/Loading/styles.module.css
+++ b/src/components/Train/Loading/styles.module.css
@@ -46,5 +46,5 @@
     font-size: 1rem;
     font-weight: bold;
     color: #1d2b3c;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
 }
