--- a/src/components/Train/Result/styles.module.css
+++ b/src/components/Train/Result/styles.module.css
@@ -10,7 +10,7 @@
 .root span {
   font-size: 1.125rem;
   display: flex;
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   line-height: 1.2;
   align-items: center;
   color: #1d2b3c;
@@ -341,7 +341,7 @@
   font-size: .875rem;
   font-weight: bold;
   color: #1d2b3c;
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
 }
 
 .detail {
