--- a/src/components/Train/Result_back/styles.module.css
+++ b/src/components/Train/Result_back/styles.module.css
@@ -8,7 +8,7 @@
 .modelResult span {
     font-size: 1.125rem;
     display: flex;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     line-height: normal;
     align-items: center;
     color: #1d2b3c;
@@ -169,7 +169,7 @@
 
 .or span {
     font-size: 1.125rem;
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     color: #000;
 }
 
@@ -194,7 +194,7 @@
 .radio label {
     font-size: 1.125rem;
     color: #000;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     cursor: pointer;
 }
 
@@ -309,7 +309,7 @@ span.performanceScore {
 
 .progressTitle span {
     font-size: 1.25rem;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     color: #000;
     max-width: 100%;
     text-overflow: ellipsis;
@@ -569,7 +569,7 @@ span.performanceScore {
 .modelInsightsBlock span {
     font-size: 1.125rem;
     display: flex;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     line-height: 1.2;
     color: #1d2b3c;
     margin-right: 1em;
@@ -632,7 +632,7 @@ span.performanceScore {
 .modelInsightsText span {
     font-size: 1.125rem;
     display: block;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     line-height: 1.2;
     color: #1d2b3c;
     overflow: hidden;
@@ -672,7 +672,7 @@ span.performanceScore {
 .modelInsightsImageTitle span {
     font-size: 1rem;
     display: block;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     line-height: 1.2;
     color: rgb(68, 142, 237);
 }
@@ -759,7 +759,7 @@ span.performanceScore {
     font-size: .875rem;
     font-weight: bold;
     color: #1d2b3c;
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
 }
 
 .costBlock {
@@ -786,7 +786,7 @@ span.performanceScore {
 }
 
 .costTitle span {
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     font-size: 1rem;
     line-height: 1.13;
     color: #000000;
@@ -798,7 +798,7 @@ span.performanceScore {
 }
 
 .costContent span {
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     font-size: 0.75rem;
     line-height: 1.33;
     color: #000000;
@@ -835,7 +835,7 @@ span.performanceScore {
 }
 
 .costCell span {
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     font-size: 0.875rem;
     line-height: 1.29;
     color: #000000;
@@ -877,7 +877,7 @@ span.performanceScore {
 }
 
 .costInput input {
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     font-size: 0.875rem;
     line-height: 1.29;
     color: #000000;
@@ -974,7 +974,7 @@ span.performanceScore {
 }
 
 .costText span {
-    font-family: SanFranciscoText;
+    font-family: 'Source Han Sans SC';
     font-size: 0.75rem;
     line-height: 1.33;
     color: #000000;
@@ -1113,7 +1113,7 @@ span.performanceScore {
 }
 
 .tab span {
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     font-size: 1.125rem;
     line-height: 1.15;
     color: #979797;
