--- a/src/components/Train/Start/styles.module.css
+++ b/src/components/Train/Start/styles.module.css
@@ -8,7 +8,7 @@
 .startTitle {
   display: flex;
   margin: 0.45em 0;
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
 }
 
 .startTitle span {
@@ -153,7 +153,7 @@
 }
 
 .tab span {
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 1.125rem;
   line-height: 1.15;
   color: #979797;
@@ -218,7 +218,7 @@
 }
 
 .targetCell span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   color: #4a4a4a;
   font-size: 0.875rem;
   text-overflow: ellipsis;
@@ -259,7 +259,7 @@
 }
 
 .simplifiedText span {
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 1.125rem;
   line-height: 1.15;
   color: #4a4a4a;
@@ -280,7 +280,7 @@
 }
 
 .toolSelect select {
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   line-height: 1.2;
   color: #4a4a4a;
@@ -299,7 +299,7 @@
 
 .toolLabel span {
   height: 1.2;
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   font-weight: bold;
   color: #4a4a4a;
@@ -317,7 +317,7 @@
 }
 
 .toolButton span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #ffffff;
 }
@@ -335,7 +335,7 @@
 }
 
 .table span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   color: #4a4a4a;
   font-size: 0.875rem;
   line-height: 1.5;
@@ -565,7 +565,7 @@
 }
 
 .advancedTitle_Outlier span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1.125rem;
   color: #000000;
   /*line-height: 1.2;*/
@@ -579,7 +579,7 @@
 }
 
 .advancedTitle span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1.125rem;
   color: #000000;
   line-height: 1.2;
@@ -594,7 +594,7 @@
 }
 
 .advancedOption select {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -603,7 +603,7 @@
 }
 
 .advancedOption span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -611,7 +611,7 @@
 }
 
 .advancedOption input[type='text'] {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1rem;
@@ -639,7 +639,7 @@
 }
 
 .advancedOptionBox label {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -658,7 +658,7 @@ span.advancedDesc {
 }
 
 .advancedSize {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -668,7 +668,7 @@ span.advancedDesc {
 }
 
 .antdAdvancedSize {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -743,7 +743,7 @@ span.advancedDesc {
 }
 
 .advancedPercentInput input {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000;
   line-height: 1.2;
@@ -754,7 +754,7 @@ span.advancedDesc {
 }
 
 .advancedPercentInput span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000;
   line-height: 1.2;
@@ -769,7 +769,7 @@ span.advancedDesc {
 }
 
 .advancedPercentText span {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000;
   line-height: 1.2;
@@ -897,7 +897,7 @@ span.advancedDesc {
 }
 
 .advancedAlgorithm label {
-  font-family: SanFranciscoText;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   color: #000000;
   line-height: 1.2;
@@ -1180,7 +1180,7 @@ button.disable {
 }
 
 .chooseLabel span {
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 1rem;
   font-weight: bold;
   color: #4a4a4a;
@@ -1193,14 +1193,14 @@ button.disable {
 }
 
 .chooseBox label {
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 0.875rem;
   color: #4a4a4a;
   cursor: pointer;
 }
 
 .chooseBox input {
-  font-family: HelveticaNeue;
+  font-family: 'Source Han Sans SC';
   font-size: 0.875rem;
   cursor: pointer;
 }
