--- a/src/components/User/SignIn/styles.module.css
+++ b/src/components/User/SignIn/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     z-index: 1;
-    font-family: HelveticaNeue;
+    font-family: 'Source Han Sans SC';
     margin: 0 auto;
     background: #fff;
     margin-top: 0.35em;
