--- a/src/components/Report/styles.module.css
+++ b/src/components/Report/styles.module.css
@@ -2,6 +2,11 @@ html {
   font-size: 16px;
 }
 
+canvas{
+  background-color: #fff;
+  padding: 12px 16px;
+}
+
 .report {
   font-size: 80px;
   width: 1000px;
