fix export model result

--- a/src/components/Modeling/AdvancedView/AdvancedView.module.css
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.css
@@ -51,9 +51,9 @@
     text-align: center;
   }
 
-  .tableHeader {
-    margin-right: 17px;
-  }
+  /* .tableHeader { */
+    /* margin-right: 17px; */
+  /* } */
 .advancedModelTableDiv {
   width: 100%;
   overflow-x: scroll;
