--- a/src/components/Train/AdvancedViewUn/AdvancedView.module.css
+++ b/src/components/Train/AdvancedViewUn/AdvancedView.module.css
@@ -55,9 +55,9 @@
     text-align: center;
   }
 
-  .tableHeader {
+  /* .tableHeader {
     margin-right: 17px;
-  }
+  } */
 
   .adrow .adcell {
     padding: 0.2em;
