--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -26,6 +26,14 @@
     white-space: nowrap;
 }
 
+.process dt{
+    font-size:16px;
+    font-weight: bold;
+}
+.process dt:not(:first-child){
+    margin-top: 10px;
+}
+
 .process label {
     font-size: 0.2em;
 }
