RL-2163 【Model Process信息详细化】前端开发

--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -27,8 +27,18 @@
 }
 
 .process dt{
-    font-size:16px;
+    font-size:14px;
     font-weight: bold;
+    text-transform: none;
+    display: flex;
+    align-items: center;
+}
+.process label{
+    font-weight: normal;
+    max-width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: inline-block;
 }
 .process dt:not(:first-child){
     margin-top: 10px;
