--- a/src/components/Modeling/AdvancedView/AdvancedView.module.css
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.css
@@ -262,3 +262,10 @@
     display: inline-block;
     vertical-align: bottom;
   }
+.mccb{
+  display: flex;
+  justify-content: flex-end;
+}
+.mccb button{
+  margin-left: 20px;
+}
