fix map dict && fix download result

--- a/src/components/Train/Result/styles.module.css
+++ b/src/components/Train/Result/styles.module.css
@@ -639,3 +639,25 @@ button.disable {
   background-image: none;
   border-color: transparent;
 }
+
+.mapCell {
+  display: flex;
+  padding: 0.1em;
+  border: solid 1px #d8d8d8;
+  /* border-right: 1px solid #d8d8d8; */
+  flex: 0 0 0.4em;
+  align-items: center;
+  height: 30px;
+  padding: 0 30px;
+}
+
+.mapCell span {
+  display: inline-block;
+  font-size: 0.875rem;
+  overflow: hidden;
+  padding: 0.5em 0;
+  white-space: nowrap;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  width: 100%;
+}
