--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -92,9 +92,14 @@
 }
 
 .process dd {
-    display: flex;
+    /*display: flex;*/
     margin-bottom: 0.1em;
     align-items: center;
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
 }
 
 .process dd div {
