--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -109,6 +109,13 @@
     display: flex;
 }
 
+.over dd{
+    max-width: 270px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+}
+
 .result {
     display: flex;
     flex: none;
