--- a/src/components/Train/Result/styles.module.css
+++ b/src/components/Train/Result/styles.module.css
@@ -280,7 +280,7 @@
 .tabs {
   border-bottom: 1px #1D2B3C solid;
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   margin-bottom: 40px
 }
 
