--- a/src/components/Charts/charts.module.css
+++ b/src/components/Charts/charts.module.css
@@ -98,6 +98,16 @@
     padding: 10px 20px;
 }
 
+.small{
+    transform: scale(0.8);
+    margin-left: 10px !important;
+    border: 1px solid#485469;
+}
+.white{
+    color: #485469;
+    background: #fff;
+}
+
 .button span{
     font-size: 1rem;
     color: #fff;
@@ -105,7 +115,7 @@
 }
 
 .pva{
-    width: 630px;
+    width: 580px;
     font-size: 16px;
     display: flex;
     align-items: center;
