--- a/src/components/Detail/styles.module.css
+++ b/src/components/Detail/styles.module.css
@@ -53,7 +53,7 @@
   border-radius: 4px;
   border-top-left-radius: 0;
   display: flex;
-  flex-direction: column;
+  /*flex-direction: column;*/
   flex: 1 1 0;
 }
 
