--- a/src/components/Charts/charts.module.css
+++ b/src/components/Charts/charts.module.css
@@ -171,3 +171,16 @@
     align-items: center;
 }
 
+.metricSwitch {
+    display: flex;
+    flex: none;
+    align-items: center;
+    position: absolute;
+    right: 120px;
+}
+.metricSwitch span {
+    margin: 0 10px;
+}
+.metricSwitch button{
+    margin-left: 0 !important;
+}
