--- a/src/components/Data/Connect/styles.module.css
+++ b/src/components/Data/Connect/styles.module.css
@@ -6,6 +6,16 @@
     flex: auto;
 }
 
+.chooseCharset {
+  font-size: 1.25rem;
+  margin-left: auto;
+  margin-right: 1rem;
+}
+
+.charsets {
+  width: 10rem;
+}
+
 .uploadRow {
     display: flex;
     flex: none;
@@ -60,6 +70,7 @@
     margin-bottom: 0.15em;
     display: flex;
     flex: none;
+    align-items: center;
 }
 
 .title span {
@@ -339,7 +350,7 @@
     justify-content: center;
     align-items: center;
     margin-left: auto;
-    
+
 }
 
 .progressButton span {
