--- a/src/components/Modeling/AdvancedView/AdvancedView.module.css
+++ b/src/components/Modeling/AdvancedView/AdvancedView.module.css
@@ -88,7 +88,8 @@
   }
   .buttonr{
       position: absolute;
-      right: 50px;
+      /*right: 50px;*/
+      left: 600px;
       top: 30%;
   }
   .detailCurves {
