--- a/src/components/Train/Start/styles.module.css
+++ b/src/components/Train/Start/styles.module.css
@@ -1219,3 +1219,19 @@ button.disable {
   color: #ccc;
   cursor: not-allowed;
 }
+.button{
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(to bottom, #5b657b, #243448);
+  color: #fff;
+  border: 0;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  font-size: 16px;
+  margin-right: .25em;
+  padding: 10px 20px;
+}
+.button span{
+  color:#fff;
+}
