--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -115,6 +115,13 @@
     display: block;
 }
 
+.over dt label{
+    max-width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+}
+
 .result {
     display: flex;
     flex: none;
