--- a/src/components/Train/Result/styles.module.css
+++ b/src/components/Train/Result/styles.module.css
@@ -143,7 +143,7 @@
   flex-direction: column;
   flex: none;
   position: relative;
-  overflow-y: auto;
+  overflow-y: scroll;
   overflow-x: visible;
   margin-left: -200px;
   padding-left: 200px;
