--- a/src/components/Common/ErrorBoundary/styles.module.css
+++ b/src/components/Common/ErrorBoundary/styles.module.css
@@ -1,7 +1,7 @@
 .errorBoundary {
   font-size: 1.6rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
