--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -14,6 +14,31 @@
     color: #1d2b3c;
 }
 
+.over dd,.modelResult dt{
+    display: flex !important;
+    align-items: end !important;
+}
+
+.modelResult dd label{
+    font-size:14px;
+    overflow: visible;
+    font-weight: bold;
+}
+
+.modelResult dd ul,.modelResult dt ul{
+    list-style: none;
+    margin-block-start:0;
+    margin-block-end:0;
+    padding-inline-start:0;
+    overflow:hidden;
+}
+
+.popover{
+    max-height:200px;
+    overflow: scroll;
+    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.15);
+}
+
 .process {
     /*height: 1em;*/
     padding: 0.2em;
@@ -87,7 +112,8 @@
 
 .process p{
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
+    align-items: end;
 }
 
 .process dd {
