--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -16,7 +16,7 @@
 
 .over dd,.modelResult dt{
     display: flex !important;
-    align-items: end !important;
+    align-items: flex-end !important;
 }
 
 .modelResult dd label{
@@ -113,7 +113,7 @@
 .process p{
     display: flex;
     /*align-items: center;*/
-    align-items: end;
+    align-items: flex-end;
 }
 
 .process dd {
