--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -13,10 +13,13 @@
     align-items: center;
     color: #1d2b3c;
 }
+.over{
+    color:#808080;
+}
 
 .over dd,.modelResult dt{
     display: flex !important;
-    align-items: flex-end !important;
+    align-items: self-end !important;
 }
 
 .modelResult dd label{
@@ -32,6 +35,7 @@
     padding-inline-start:0;
     overflow:hidden;
 }
+
 
 .popover{
     max-height:200px;
