--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -27,13 +27,21 @@
     overflow: visible;
     font-weight: bold;
 }
+.over dt {
+    align-items: flex-start !important
+}
 
-.modelResult dd ul,.modelResult dt ul{
+.over ul{
     list-style: none;
     margin-block-start:0;
     margin-block-end:0;
     padding-inline-start:0;
     overflow:hidden;
+    color:#333;
+}
+
+.modelResult dd ul,.modelResult dt ul{
+
 }
 
 
@@ -91,6 +99,7 @@
 .process label {
     text-transform: capitalize;
     font-size: 0.15em;
+    font-weight: bold;
 }
 
 .many img {
