--- a/src/components/Info/Quality/styles.module.css
+++ b/src/components/Info/Quality/styles.module.css
@@ -407,7 +407,7 @@
 	flex: none;
 	flex-direction: column;
 	/* margin-top: .1em; */
-	margin: -0.2em -0.5em;
+	margin: -20px -50px;
 	position: relative;
 }
 
