--- a/src/components/Detail/Status/list.module.css
+++ b/src/components/Detail/Status/list.module.css
@@ -174,3 +174,10 @@
   color: #c4cbd7;
   margin-top: 1.5rem;
 }
+.results {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.emptyResults {
+  text-decoration: none;
+}
