--- a/src/components/Modeling/Result/styles.module.css
+++ b/src/components/Modeling/Result/styles.module.css
@@ -1362,6 +1362,10 @@ span.performanceScore {
 }
 
 .dfn{
+    display: flex;
+}
+
+.dfn dfn{
     display:inline-block;
     font-style: normal;
     max-width: 80px;
