--- a/src/components/Train/Start/styles.module.css
+++ b/src/components/Train/Start/styles.module.css
@@ -1111,7 +1111,7 @@ button.disable {
   background: #fff;
   padding: 0.1em 12px;
   margin-top: 0.05em;
-  max-height: 5em;
+  /* max-height: 5em; */
   overflow-y: auto;
   overflow-x: hidden;
   box-shadow: 0 7px 10px 0 rgba(0, 0, 0, 0.3);
