--- a/src/components/Detail/Deployment/styles.module.css
+++ b/src/components/Detail/Deployment/styles.module.css
@@ -277,3 +277,12 @@
 .helpIcon {
   margin-left: 0.1em;
 }
+.chooseCharset {
+  font-size: 1rem;
+  margin-left: auto;
+  margin-right: 1rem;
+}
+
+.charsets {
+  width: 10rem;
+}
